--- a/index.html
+++ b/index.html
@@ -59,7 +59,71 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+
+      <section>
+        <div class="habit">
+          <div class="habit-text">
+            <h3>Change Your Habits</h3>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+          </div>
+          <hr class="habit-hr">
+          <div class="habit-element">
+            <div class="habit-element-item">
+              <img src="images/image 3.png" alt="" class="habit-element-img">
+              <h4>Movement</h4>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="habit-element-item">
+              <img src="images/image 2.png" alt="" class="habit-element-img">
+              <h4>Time</h4>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="habit-element-item">
+              <img src="images/image 4.png" alt="" class="habit-element-img">
+              <h4>Practice</h4>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="habit-element-item">
+              <img src="images/image 5.png" alt="" class="habit-element-img">
+              <h4>Weight Loss</h4>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+          </div>
+        </div>
+        
+      </section>
+
+      <section>
+        <div class="run">
+          <div class="run-text ">
+            <h3 style="text-align: left;" class="common-text">Run an Extra Mile Easily</h3>
+            <p style="text-align: left;" class="common-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            <button class="btn-primary">Join Now</button>
+          </div>
+          <div class="run-image">
+            <img src="images/run.jpg" alt="">
+          </div>
+        </div>
+        
+      </section>
+
+      <section>
+        <div class="bmi-text">
+          <h3 class="common-text align-left">BMI Calculator</h3>
+        <p class="common-p align-left">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        <div class="bmi-info">
+          <div class="bmi-info-chart">
+            <h2>BMI Calculator Chart</h2>
+          </div>
+          <div class="bmi-info-calulator">
+
+          </div>
+        </div>
+      </section>
+
+    </main>
 
     <footer></footer>
   </body>
