--- a/index.html
+++ b/index.html
@@ -116,9 +116,62 @@
         <div class="bmi-info">
           <div class="bmi-info-chart">
             <h2>BMI Calculator Chart</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th>BMI</th>
+                  <th>Weight Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5 - 24.9</td>
+                  <td>Healthy</td>
+                </tr>
+                <tr>
+                  <td>25.0 - 29.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <tr>
+                  <td>30.0 - and Above</td>
+                  <td>Obese</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <div class="bmi-info-calulator">
+          <div class="bmi-info-calculator">
+            <h2>Calculate your BMI</h2>
+            <p class="common-p align-left">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
 
+            <form>
+
+              <div class="form-group">
+                <input type="text" name="height" id="height" placeholder="Height/cm">
+                <input type="text" name="weight" id="weight" placeholder="Weight/cm">
+                <input type="text"  placeholder="Age">
+                <select name="Sex" id="">
+                  <option value="">Sex</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+                <select class="select-activity">
+                  <option  value="">Select an activity factor</option>
+                  <option value="light">Light</option>
+                  <option value="moderate">Moderate</option>
+                  <option value="active">Active</option>
+                  <option value="very active">Very Active</option>
+                </select>
+
+              </div>
+
+              
+              <input class="btn-primary" type="submit" value="Calculate">
+
+            </form>
           </div>
         </div>
       </section>
