--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="run-text ">
             <h3 style="text-align: left;" class="common-text">Run an Extra Mile Easily</h3>
             <p style="text-align: left;" class="common-p">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
-            <button class="btn-primary">Join Now</button>
+            <button class="btn-primary btn-2">Join Now</button>
           </div>
           <div class="run-image">
             <img src="images/run.jpg" alt="">
@@ -123,7 +123,7 @@
                   <th>Weight Status</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody class="common-p">
                 <tr>
                   <td>Below 18.5</td>
                   <td>Underweight</td>
