--- a/index.html
+++ b/index.html
@@ -249,6 +249,27 @@
           </div>
         </div>
       </section>
+
+      <!-- -----packages-------- -->
+
+      <section>
+        <div class="packages">
+          <div class="packages-info">
+            <h2 class="common-text">Our packages</h2>
+            <p class="common-p">Fitness is the key of a healthy life. So don't be late join us for the change in your life.</p>
+            <div class="packages-container">
+              <div class="packages-content">
+                <div class="card">
+                  
+                </div>
+                <div class="card"></div>
+                <div class="card"></div>
+              </div>
+              <div class="packages-content"></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
